test/corpus/fail/M0136.mo
=========
M0136.mo
=========

(do {}) : Bool

---

(source_file
  (exp_dec
    (annot_exp_object
      (par_exp
        (do_exp
          (block_exp)))
      (path_typ
        (typ_path
          (type_identifier))))))
